--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -4,4 +4,6 @@
   margin: 1rem;
   box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
   text-align: center;
+  background-color: #ffffff;
+  border-radius: 3px;
 }
