--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -12,6 +12,12 @@
   font-size: 80%;
 }
 
+.Pokecard-title {
+  margin-bottom: 1rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 .Pokecard-image {
   display: flex;
   justify-content: center;
